# TASTE-SAMV71-RTEMS-Drivers

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  install.sh
configurations/: samv71-rtems-can-driver.asn  samv71-rtems-serial-driver.asn
src/: CMakeLists.txt
src/RuntimeMocks/: CMakeLists.txt  asn1crt.c  asn1crt.h  asn1crt_encoding.c  asn1crt_encoding.h  asn1crt_encoding_acn.c  asn1crt_encoding_acn.h  asn1crt_encoding_uper.c  asn1crt_encoding_uper.h  dataview-uniq.c  dataview-uniq.h  drivers_config.c  drivers_config.h  interfaces_info.c  interfaces_info.h  linux-serial-ccsds-driver.c  linux-serial-ccsds-driver.h  samv71-rtems-can-driver.c  samv71-rtems-can-driver.h  samv71-rtems-serial-driver.c  samv71-rtems-serial-driver.h  system_spec.c  system_spec.h
src/app/: CMakeLists.txt  main.c
src/samv71_can_generic/: CMakeLists.txt  samv71_can_generic.c  samv71_can_generic.h
src/samv71_rtems_serial/: CMakeLists.txt  samv71_rtems_serial.c  samv71_rtems_serial.h  samv71_rtems_serial_internal.h
